<resources>
    <string name="app_name">SamahnCrm</string>
    <string name="login">Login</string>
    <string name="phonenumber">Phone Number </string>
    <string name="password">Password</string>
    <string name="logintitle1">Welcome </string>

    <string name="logintitle">Login Now to continue</string>
    <string name="task_title">Task Title</string>
    <string name="task_details">Task Details</string>
    <string name="task_status">Task Status</string>
    <string name="show_task">Show Task</string>
    <string name="task">المهام</string>
    <string name="my_account">حسابي</string>
    <string name="developed_by">Developed By</string>
    <string name="fill_field">must fill this field</string>
    <string name="waiting_review">Waiting Review</string>
    <string name="working">Working</string>
    <string name="accept">Accept</string>
    <string name="waiting">Waiting</string>
    <string name="finish">Finish</string>
    <string name="day">day</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hour</string>


</resources>
