<?xml version="1.0" encoding="utf-8"?>
<layout>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"

    android:layout_height="match_parent">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".Views.Activites.LoginActivity">

        <LinearLayout
            android:layout_marginTop="@dimen/dimen24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

<!--            <TextView-->
<!--                android:id="@+id/skip"-->
<!--                android:layout_width="300dp"-->
<!--                android:layout_height="80dp"-->
<!--                android:gravity="start |center_vertical"-->
<!--                android:text="@string/skip"-->
<!--                android:padding="@dimen/dimen8"-->
<!--                android:textSize="18sp"-->
<!--                 android:onClick="SkipClick"-->
<!--                android:layout_alignParentRight="true"-->
<!--                />-->
            <ImageView
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:src="@drawable/sauid_aqar_word"
                 android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logintitle1"
                android:textSize="@dimen/medium_text_size"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textcolor"
                android:gravity="center_horizontal"
                android:layout_margin="@dimen/dimen8"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logintitle"
                android:textSize="@dimen/edit_text_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textcolorDark"
                android:gravity="center_horizontal"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/mobile_register"
                     android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edt_background"
                     android:padding="10dp"
                    android:inputType="phone"
                    android:layout_marginTop="15dp"
                    android:hint="@string/phonenumber"
                    android:gravity="start"
                    android:textAlignment="viewStart"
                     android:textColor="@color/textcolorDark"
                    android:drawableStart="@drawable/ic_telephone_keypad_with_ten_keys"
                    android:drawablePadding="@dimen/dimen8"
                    />

                <EditText
                    android:id="@+id/password_register_id"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edt_background"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:layout_marginTop="15dp"
                    android:hint="@string/password"
                    android:gravity="start"
                    android:textAlignment="viewStart"
                    android:textColor="@color/textcolorDark"
                    android:drawableStart="@drawable/ic_closed_lock"
                    android:drawablePadding="@dimen/dimen8"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="@dimen/edit_text_size"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/textcolorDark"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dimen16"
                    />


                <Button
                    android:id="@+id/lgn_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="30dp"
                    android:minWidth="190dp"
                    android:textSize="20sp"
                    android:text="@string/login"
                    android:padding="8dp"
                    android:fontFamily=""
                    android:textColor="@color/textcolorDark"
                    android:background="@drawable/btn_background"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:layout_marginTop="16dp"
                    android:onClick="LoginClick"
                    />


            </LinearLayout>







        </LinearLayout>
    </LinearLayout>
</ScrollView>
</layout>