<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_marginTop="240dp"

    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
            android:id="@+id/Layout_myadvertise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:orientation="horizontal"
            android:minHeight="50dp"
            android:onClick="onClick"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                 android:src="@drawable/ic_folder_1"
                android:layout_marginStart="@dimen/dimen8"
                android:layout_marginEnd="@dimen/dimen8"
                />
            <TextView
                android:id="@+id/page"
                android:text="@string/task"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/cairo_regular"
                android:layout_gravity="center"
                android:textSize="@dimen/dimen16"
                android:gravity="start"
                android:textAlignment="viewStart"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/Layout_addaqqar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:orientation="horizontal"
            android:minHeight="50dp"
            android:onClick="onClick"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                 android:src="@drawable/ic_iconfinder_file_minus_2561434"
                android:layout_marginStart="@dimen/dimen8"
                android:layout_marginEnd="@dimen/dimen8"
                />
            <TextView
                android:text="المستندات"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/cairo_regular"
                  android:layout_gravity="center"
                android:textSize="@dimen/dimen16"
                android:gravity="start"
                android:textAlignment="viewStart"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/Layout_favourites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:minHeight="50dp"
            android:onClick="onClick"

            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                 android:src="@drawable/ic_folder_1"
                android:layout_marginStart="@dimen/dimen8"
                android:layout_marginEnd="@dimen/dimen8"
                />
            <TextView
                android:text="@string/my_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                 android:layout_gravity="center"
                android:textSize="@dimen/dimen16"
                android:gravity="start"
                android:textAlignment="viewStart"
                />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/dimen24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textcolorDark"

            tools:ignore="Suspicious0dp" />
        <FrameLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_tera"
            android:orientation="horizontal"
            android:onClick="onClick"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/tera"
                    android:scaleType="centerCrop"
                    android:onClick="onClick"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developed_by"
                    android:textSize="@dimen/edit_text_size"
                    android:gravity="center"
                    android:textColor="@color/textcolorDark"
                    android:layout_marginTop="@dimen/dimen8"
                    android:layout_marginBottom="@dimen/dimen8"
                    android:autoLink="web"
                    android:layout_gravity="center"
                    android:onClick="onClick"/>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_develped"
                    android:layout_marginRight="@dimen/dimen4"
                    android:layout_marginLeft="@dimen/dimen4"/>
                <TextView
                    android:id="@+id/tv_TeraNinjas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tera Ninja"
                    android:textSize="@dimen/edit_text_size"
                    android:gravity="center"
                    android:textColor="@color/textcolorDark"
                    android:layout_marginTop="@dimen/dimen8"
                    android:layout_marginBottom="@dimen/dimen8"
                    android:autoLink="web"
                    android:layout_gravity="center"
                    android:onClick="onClick"/>
            </LinearLayout>
        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="App Version"
            android:textSize="@dimen/medium_text_size"
            android:gravity="center"
            android:textColor="@color/textcolorDark"
            android:layout_marginBottom="@dimen/dimen8"/>
        <TextView
            android:id="@+id/tv_versioncode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1.01.1"
            android:textSize="@dimen/edit_text_size"
            android:gravity="center"
            android:textColor="@color/textcolorDark"
            android:layout_marginBottom="@dimen/dimen8"/>
    </LinearLayout>
</RelativeLayout>